--- a/app/src/main/res/layout/item_recording_photo.xml
+++ b/app/src/main/res/layout/item_recording_photo.xml
@@ -5,17 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="8dp"
-        android:paddingBottom="5dp"
         android:paddingStart="15dp"
+        android:paddingTop="8dp"
         android:paddingEnd="15dp"
+        android:paddingBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
+
         <RelativeLayout
             android:id="@+id/photo_shelter"
             android:layout_width="match_parent"
@@ -23,25 +25,27 @@
             android:background="@color/photo_shelter"
             android:visibility="gone">
             <Button
-                android:id="@+id/photo_delete"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:background="@drawable/close_btn_48x48px"/>
-            <Button
                 android:id="@+id/photo_cancel"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/photo_delete"
-                android:background="@drawable/cancel_icon"/>
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@id/photo_delete"
+                android:background="@drawable/cancel_icon" />
+            <Button
+                android:id="@+id/photo_delete"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/close_btn_48x48px"
+                android:layout_alignParentRight="true"/>
         </RelativeLayout>
+
         <com.shining.memo.widget.ResizableImageView
             android:id="@+id/item_imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/audio_rerecording_shape"
-            android:layout_gravity="center_vertical"/>
+            android:scaleType="fitCenter" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
