--- a/app/src/main/res/layout/item_recording_text.xml
+++ b/app/src/main/res/layout/item_recording_text.xml
@@ -7,6 +7,7 @@
     android:focusable="true">
     <EditText
         android:id="@+id/item_editText"
+        android:textIsSelectable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="40dp"
