--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,11 @@
     <color name="calendar_line">#DDDDDD</color>
     <color name="calendar_week">#AAAAAA</color>
 
-
-
+    <color name="textcolor_red">#FF0000</color>
+    <color name="textcolor_orange">#FF7F00</color>
+    <color name="textcolor_yellow">#FFFF00</color>
+    <color name="textcolor_green">#66CD00</color>
+    <color name="textcolor_black">#000000</color>
+    <color name="textcolor_blue">#4169E1</color>
+    <color name="textcolor_purple">#8B008B</color>
 </resources>
