--- a/app/src/main/res/layout/item_edit.xml
+++ b/app/src/main/res/layout/item_edit.xml
@@ -23,14 +23,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:ignore="all"
         android:id="@+id/item_content"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:textColor="@color/add_new"
-        android:hint="@string/item"
         android:textSize="16sp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/item_state"
