--- a/app/src/main/res/layout/list_new.xml
+++ b/app/src/main/res/layout/list_new.xml
@@ -7,14 +7,12 @@
 
     <TextView
         android:id="@+id/list_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
-        android:text="@string/list_icon"
-        android:textColor="@color/add_new"
-        android:textSize="36sp"
+        android:background="@drawable/add_new_item_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +27,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/list_new"
         android:textColor="@color/add_new"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/list_icon"
