--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,6 +41,7 @@
     <color name="photo_shelter">#8E000000</color>
     <!--calendar color-->
     <color name="calendar_select">#FF8833</color>
+    <color name="calendar_unselected">#CCCCCC</color>
     <color name="calendar_line">#DDDDDD</color>
     <color name="calendar_week">#AAAAAA</color>
 
