--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -17,6 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textSize="16sp"
+            android:textColor="@color/main_task_noclickcolor"
             android:text="Task"
             />
         <TextView
@@ -24,6 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="11.5dp"
+            android:textSize="16sp"
+            android:textColor="@color/main_task_noclickcolor"
             android:gravity="center"
             android:text="List"
             />
@@ -32,6 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="11.5dp"
+            android:textSize="16sp"
+            android:textColor="@color/main_task_noclickcolor"
             android:gravity="center"
             android:text="Note"
             />
@@ -71,6 +77,7 @@
             android:layout_marginBottom="15dp"
             android:src="@drawable/main_additem"/>
         <TextView
+            android:id="@+id/main_titlebar_addtext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
