--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -17,7 +17,7 @@
         android:background="@null"
         android:ems="10"
         android:gravity="center_vertical|left"
-        android:hint="@string/edit_title_hint"
+        android:hint="@string/view_title_hint"
         android:imeOptions="actionNext"
         android:inputType="textMultiLine"
         android:minHeight="40dp"
