--- a/app/src/main/res/layout/bottom_recording_textedit.xml
+++ b/app/src/main/res/layout/bottom_recording_textedit.xml
@@ -7,47 +7,44 @@
     android:layout_height="50dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
-        <Button
-            android:id="@+id/textedit_font"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@null"
-            android:text="B"
-            android:textColor="@color/item_btn_textcolor"
-            android:textSize="22dp"/>
-        <Button
-        android:id="@+id/textedit_line"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@null"
-        android:text="U"
-        android:textColor="@color/item_btn_textcolor"
-        android:textSize="22dp"/>
+        android:gravity="center_vertical">
         <Button
-            android:id="@+id/textedit_fontsize"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@null"
-            android:text="A"
-            android:textColor="@color/item_btn_textcolor"
-            android:textSize="22dp"/>
+            android:id="@+id/bottom_textedit_back"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:background="@drawable/back_icon"
+            android:layout_alignParentLeft="true"/>
+
         <Button
-            android:id="@+id/textedit_color"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@null"
-            android:text="C"
-            android:textColor="@color/item_btn_textcolor"
-        android:textSize="22dp"/>
-    </LinearLayout>
+            android:id="@+id/bottom_bold"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/bold_text_icon"
+            android:layout_toLeftOf="@+id/bottom_underline"/>
+        <Button
+            android:id="@+id/bottom_underline"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/underline_text_icon"
+            android:layout_toLeftOf="@+id/bottom_deleteline"/>
+        <Button
+            android:id="@+id/bottom_deleteline"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/deleteline_text_icon"
+            android:layout_toLeftOf="@+id/bottom_color"/>
+        <Button
+            android:id="@+id/bottom_color"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/text_color_icon" />
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
