--- a/app/src/main/res/layout/task_new.xml
+++ b/app/src/main/res/layout/task_new.xml
@@ -25,7 +25,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/list_new"
+        android:text="@string/task_new"
         android:textColor="@color/add_new"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
