--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -98,11 +98,12 @@
     <FrameLayout
         android:id="@+id/main_page"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="21dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_line_second">
+        app:layout_constraintTop_toBottomOf="@id/main_line_second"
+        app:layout_constraintBottom_toBottomOf="parent">
 
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
