--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -6,10 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".view.AlarmActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/title_alarm"
-        tools:ignore="MissingConstraints" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/alarm_header"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/alarm_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:gravity="center"
+            android:text="@string/alarm_clock"
+            android:textColor="@color/calendar_select"
+            android:textSize="32sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/alarm_cancel"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/close_icon"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/set_alarm"
@@ -17,17 +47,17 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@color/colorWhite"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
+        app:layout_constraintTop_toBottomOf="@+id/alarm_header">
 
         <com.shining.memo.widget.DatePickerView
             android:id="@+id/month_pv"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:layout_weight="1" />
 
         <View
@@ -38,7 +68,7 @@
         <com.shining.memo.widget.DatePickerView
             android:id="@+id/day_pv"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:layout_weight="1" />
 
         <View
@@ -49,7 +79,7 @@
         <com.shining.memo.widget.DatePickerView
             android:id="@+id/hour_pv"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:layout_weight="1" />
 
         <View
@@ -60,7 +90,7 @@
         <com.shining.memo.widget.DatePickerView
             android:id="@+id/minute_pv"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:layout_weight="1" />
 
     </LinearLayout>
@@ -141,12 +171,14 @@
         android:id="@+id/alarm_save"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:background="#464646"
+        android:background="@drawable/orange_rectangle_background"
         android:text="@string/set_alarm_clock"
         android:textColor="@color/colorWhite"
+        android:textAllCaps="false"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/set_reminder" />
