--- a/app/src/main/res/layout/bottom_recording_colorpick.xml
+++ b/app/src/main/res/layout/bottom_recording_colorpick.xml
@@ -14,41 +14,47 @@
             android:background="@drawable/back_icon"
             android:layout_alignParentLeft="true"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/colorpick_gray"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginRight="15dp"
-            android:background="@drawable/color_oval_gray"
+            android:background="@drawable/color_ring_gray"
             android:layout_toLeftOf="@+id/colorpick_purple"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/colorpick_purple"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginRight="15dp"
-            android:background="@drawable/color_oval_purple"
+            android:background="@drawable/color_ring_purple"
             android:layout_toLeftOf="@+id/colorpick_blue"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/colorpick_blue"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginRight="15dp"
-            android:background="@drawable/color_oval_blue"
+            android:background="@drawable/color_ring_blue"
             android:layout_toLeftOf="@+id/colorpick_orange"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/colorpick_orange"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginRight="15dp"
-            android:background="@drawable/color_oval_orange"
+            android:background="@drawable/color_ring_orange"
             android:layout_toLeftOf="@+id/colorpick_red"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/colorpick_red"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginRight="15dp"
-            android:background="@drawable/color_oval_red"
+            android:background="@drawable/color_ring_red"
             android:layout_toLeftOf="@+id/colorpick_black"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/colorpick_black"
             android:layout_width="22dp"
             android:layout_height="22dp"
