--- a/calendar/src/main/res/values/colors.xml
+++ b/calendar/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="solarTextColor">#000000</color>
     <color name="lunarTextColor">#B2B2B2</color>
     <color name="hintColor">#999999</color>
+    <color name="toDayColor">#FFC8A3</color>
     <color name="selectCircleColor">#FF8833</color>
     <color name="holidayColor">#39AF81</color>
     <color name="workdayColor">#EC7230</color>
