--- a/app/src/main/res/layout/main_taskitem.xml
+++ b/app/src/main/res/layout/main_taskitem.xml
@@ -31,7 +31,27 @@
         android:layout_marginLeft="6dp"
         android:text="This is a title"
         app:layout_constraintLeft_toRightOf="@+id/main_task_type"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/main_task_audio1"
+        android:layout_width="52dp"
+        android:layout_height="16dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/main_task_audio"
+        app:layout_constraintLeft_toRightOf="@+id/main_task_type"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"/>
+    <ImageView
+        android:id="@+id/main_task_audio2"
+        android:layout_width="52dp"
+        android:layout_height="16dp"
+        android:layout_marginLeft="2.5dp"
+        android:src="@drawable/main_task_audio"
+        app:layout_constraintStart_toEndOf="@id/main_task_audio1"
+        app:layout_constraintTop_toTopOf="@+id/main_task_audio1"
+        android:visibility="invisible"/>
     <TextView
         android:id="@+id/main_task_alarm"
         android:layout_width="wrap_content"
@@ -60,7 +80,7 @@
         app:layout_constraintBottom_toBottomOf="@id/main_task_complete"
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="5dp"
-        android:visibility="gone"/>
+        android:visibility="invisible"/>
 
 
 </android.support.constraint.ConstraintLayout>
