--- a/app/src/main/res/layout/item_recording_text.xml
+++ b/app/src/main/res/layout/item_recording_text.xml
@@ -16,9 +16,11 @@
         android:textSize="18dp"
         android:duplicateParentState="true"
         android:textColor="@color/recording_title"
+        android:hint="@string/item_text_hint"
+        android:textColorHint="@color/hintColor"
         android:inputType="textMultiLine"
-        android:paddingLeft="14dp"
-        android:paddingRight="14dp"
+        android:paddingLeft="17dp"
+        android:paddingRight="17dp"
         android:background="@null"
         android:paddingTop="6dp"
         android:gravity="bottom"
