--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -17,7 +17,7 @@
         android:background="@null"
         android:ems="10"
         android:gravity="center_vertical|left"
-        android:hint="@string/view_title_hint"
+        android:hint="@string/view_title_hint_zh"
         android:imeOptions="actionNext"
         android:inputType="textMultiLine"
         android:minHeight="40dp"
@@ -25,7 +25,7 @@
         android:paddingRight="3dp"
         android:textAlignment="gravity"
         android:textColor="@color/recording_title"
-        android:textColorHint="@color/item_btn_textcolor"
+        android:textColorHint="@color/hintColor"
         android:textCursorDrawable="@drawable/cursor"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
