--- a/app/src/main/res/layout/countdown.xml
+++ b/app/src/main/res/layout/countdown.xml
@@ -2,6 +2,18 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <TextView
+        android:id="@+id/countdown_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/count_down_shape"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:text="3"
+        android:gravity="center"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
