--- a/app/src/main/res/drawable/gray_rectangle_background.xml
+++ b/app/src/main/res/drawable/gray_rectangle_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/calendar_line"/>
+        android:color="@color/white"/>
     <!-- padding设置内容区域离边界的间距 -->
     <!--<padding-->
     <!--android:bottom="2dp"-->
