--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -2,19 +2,18 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/calendar_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/gray_rectangle_background"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginTop="2dp">
+    android:layout_marginTop="8dp">
 
     <TextView
         android:id="@+id/task_finished"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
+        android:layout_width="15dp"
+        android:layout_height="14dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/finish_icon"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textColor="@color/recording_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/task_finished"
@@ -36,8 +35,8 @@
         android:id="@+id/task_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="3dp"
         android:textColor="@color/recording_title"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +46,8 @@
         android:id="@+id/task_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="2dp"
         android:textColor="@color/recording_title"
         android:textSize="18sp"
