--- a/app/src/main/res/layout/item_edit.xml
+++ b/app/src/main/res/layout/item_edit.xml
@@ -11,13 +11,11 @@
 
     <TextView
         android:id="@+id/item_state"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/non_oval_background"
+        android:background="@drawable/group_2"
         android:gravity="center"
-        android:textColor="@color/list_finish"
-        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
