--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -21,16 +21,17 @@
             android:gravity="center"
             android:text="@string/alarm_clock"
             android:textColor="@color/calendar_select"
-            android:textSize="32sp"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/alarm_cancel"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="24dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="30dp"
             android:background="@drawable/close_icon"
             android:minHeight="0dp"
             android:minWidth="0dp"
@@ -45,8 +46,6 @@
         android:id="@+id/set_alarm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorWhite"
         android:orientation="horizontal"
