--- a/app/src/main/res/layout/main_home.xml
+++ b/app/src/main/res/layout/main_home.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorWhite">
     <LinearLayout
         android:id="@+id/main_titlebar"
         android:layout_width="wrap_content"
@@ -18,6 +19,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:textColor="@color/main_task_noclickcolor"
             android:text="Task"
             />
@@ -25,8 +27,9 @@
             android:id="@+id/main_titlebar_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="11.5dp"
+            android:layout_marginLeft="16dp"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:textColor="@color/main_task_noclickcolor"
             android:gravity="center"
             android:text="List"
@@ -35,8 +38,9 @@
             android:id="@+id/main_titlebar_note"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="11.5dp"
+            android:layout_marginLeft="16dp"
             android:textSize="16sp"
+            android:textStyle="bold"
             android:textColor="@color/main_task_noclickcolor"
             android:gravity="center"
             android:text="Note"
@@ -54,7 +58,7 @@
     <View
         android:id="@+id/main_line_first"
         android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_height="1px"
         android:background="@color/main_line"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/main_titlebar_calendar"
@@ -84,12 +88,13 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="15dp"
             android:textSize="16sp"
+            android:textColor="@color/main_add_item"
             android:text="Add a new task"/>
     </LinearLayout>
     <View
         android:id="@+id/main_line_second"
         android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_height="1px"
         android:background="@color/main_line"
         app:layout_constraintTop_toBottomOf="@id/main_titlebar_add"
         app:layout_constraintLeft_toLeftOf="@id/main_titlebar"
