--- a/app/src/main/res/layout/main_taskitem.xml
+++ b/app/src/main/res/layout/main_taskitem.xml
@@ -22,16 +22,23 @@
         app:layout_constraintLeft_toLeftOf="@id/main_task_type"
         app:layout_constraintTop_toBottomOf="@+id/main_task_type"
         />
+
     <TextView
         android:id="@+id/main_task_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/main_task_titlecolor"
-        android:textSize="16sp"
+        android:singleLine="true"
         android:layout_marginLeft="6dp"
         android:text="This is a title"
+        android:textColor="@color/main_task_titlecolor"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginRight="16dp"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintRight_toLeftOf="@+id/main_task_complete"
         app:layout_constraintLeft_toRightOf="@+id/main_task_type"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="wrap" />
 
     <ImageView
         android:id="@+id/main_task_audio1"
@@ -57,30 +64,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/main_task_alarmcolor"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:text="no alarm"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintLeft_toLeftOf="@+id/main_task_title"
         app:layout_constraintTop_toBottomOf="@id/main_task_title"/>
     <ImageButton
         android:id="@+id/main_task_complete"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="11dp"
+        android:layout_width="38dp"
+        android:layout_height="0dp"
         android:layout_marginRight="31dp"
-        android:background="@drawable/main_task_complete"
+        android:scaleType="center"
+        android:background="@null"
+        android:src="@drawable/main_task_complete"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/main_task_alarm"/>
+
     <ImageView
         android:id="@+id/main_task_confirm"
         android:layout_width="25dp"
         android:layout_height="18dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/finish_icon"
-        app:layout_constraintLeft_toLeftOf="@id/main_task_complete"
-        app:layout_constraintBottom_toBottomOf="@id/main_task_complete"
-        android:layout_marginBottom="3dp"
-        android:layout_marginLeft="5dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        app:layout_constraintVertical_bias="0.6"
+        app:layout_constraintBottom_toBottomOf="@id/main_task_alarm"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="@id/main_task_complete"/>
 
 
 </android.support.constraint.ConstraintLayout>
