--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,4 +62,6 @@
     <color name="main_task_completecolor">#FFCCCCCC</color>
     <color name="main_task_clickcolor">#FFFF8833</color>
     <color name="main_task_noclickcolor">#FFCCCCCC</color>
+    <color name="main_confirm_focus">#f5f5f5</color>
+    <color name="main_add_item">#FFAAAAAA</color>
 </resources>
