--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".view.AlarmActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -21,7 +22,7 @@
             android:gravity="center"
             android:text="@string/alarm_clock"
             android:textColor="@color/calendar_select"
-            android:textSize="24sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +61,7 @@
             android:layout_weight="1" />
 
         <View
-            android:layout_width="3dp"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
@@ -71,7 +72,7 @@
             android:layout_weight="1" />
 
         <View
-            android:layout_width="3dp"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
@@ -82,7 +83,7 @@
             android:layout_weight="1" />
 
         <View
-            android:layout_width="3dp"
+            android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/line_color" />
 
@@ -93,6 +94,28 @@
             android:layout_weight="1" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="122dp"
+        android:background="@color/calendar_select"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/set_alarm" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginBottom="122dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/calendar_select"
+        app:layout_constraintBottom_toBottomOf="@+id/set_alarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/set_reminder"
@@ -134,7 +157,7 @@
         <View
             android:id="@+id/set_reminder_line"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="1dp"
             android:layout_marginTop="53dp"
             android:background="@color/line_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -174,7 +197,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/orange_rectangle_background"
+        android:background="@drawable/alarm_button_set"
         android:text="@string/set_alarm_clock"
         android:textColor="@color/colorWhite"
         android:textAllCaps="false"
