--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,6 +5,7 @@
     android:id="@+id/title_record"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:focusable="true"
     android:focusableInTouchMode="true"
     tools:layout_editor_absoluteY="25dp">
@@ -31,7 +32,8 @@
         android:id="@+id/list_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
+        android:background="@color/white"
         android:descendantFocusability="afterDescendants"
         app:layout_constraintBottom_toTopOf="@+id/list_menu"
         app:layout_constraintEnd_toEndOf="parent"
