--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,4 +62,11 @@
     <color name="main_task_completecolor">#FFCCCCCC</color>
     <color name="main_task_clickcolor">#FFFF8833</color>
     <color name="main_task_noclickcolor">#FFCCCCCC</color>
+
+    <!-- guide color -->
+    <color name="guide_title">#666666</color>
+    <color name="guide_content">#AAAAAA</color>
+    <color name="guide_button">#FF8833</color>
+    <color name="guide_dot_1">#E5E5E5</color>
+    <color name="guide_dot_2">#FF8833</color>
 </resources>
