--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
     <color name="item_btn_backgroud">#FFF6F0</color>
     <color name="item_btn_textcolor">#FF8833</color>
     <color name="half_transparent_orange">#8EFF8833 </color>
+    <color name="seekbar_transparent_orange">#1EFF8833 </color>
     <color name="photo_divider">#EEEEEE</color>
 
     <color name="photo_shelter">#80000000</color>
